tests/snapshots/contract_snapshot_exhaustive__exhaustive_receipt_with_hash.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: snap_json(&r)
---
{
  "meta": {
    "run_id": "01010101-0202-4303-8404-050505050505",
    "work_order_id": "a1a1a1a1-b2b2-4c3c-8d4d-e5e5e5e5e5e5",
    "contract_version": "abp/v0.1",
    "started_at": "2025-07-01T12:00:00Z",
    "finished_at": "2025-07-01T12:10:00Z",
    "duration_ms": 600000
  },
  "backend": {
    "id": "sidecar:claude",
    "backend_version": "3.5.0",
    "adapter_version": "0.2.0"
  },
  "capabilities": {
    "streaming": "native",
    "tool_use": "emulated"
  },
  "mode": "mapped",
  "usage_raw": {},
  "usage": {
    "input_tokens": null,
    "output_tokens": null,
    "cache_read_tokens": null,
    "cache_write_tokens": null,
    "request_units": null,
    "estimated_cost_usd": null
  },
  "trace": [],
  "artifacts": [],
  "verification": {
    "git_diff": null,
    "git_status": null,
    "harness_ok": false
  },
  "outcome": "complete",
  "receipt_sha256": "be9064c3182aa60834fcd51c0244e1e340afba7e0ad2d2c09f942517373a994a"
}
